iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

#-A INPUT -p icmp -s 192.168.123.0/24 -j ACCEPT 
#-A INPUT -p tcp -s 192.168.123.0/24 -j ACCEPT 
#-A INPUT -p udp -s 192.168.123.0/24 -j ACCEPT 

#-A INPUT -p tcp --dport 8042:8052 -j ACCEPT
#-A INPUT -p tcp --dport 8021 -j ACCEPT
#-A INPUT -p tcp --dport 8020 -j ACCEPT

# ssh
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 8022 -j ACCEPT
# NOTE: please use `fail2ban` or something like that.

# http / nginx
-A INPUT -p tcp --dport 8080 -j ACCEPT	

# transmission-web
#-A INPUT -p tcp --dport 9091 -j ACCEPT

# basic.
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -j REJECT --reject-with tcp-reset 
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -j REJECT --reject-with icmp-proto-unreachable 



COMMIT
